# rust-bot-template

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: commands.rs  main.rs
src/commands/: help.rs  mod.rs  ping.rs
