[package]
name = "insert_name_here"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.2"
tokio = "1.23.0"
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }

[dependencies.sqlx]
version = "0.6.2"
features = [ "macros", "runtime-tokio-rustls", "postgres", "offline" ]

[profile.dev.package.sqlx-macros]
opt-level = 3